overflow fix

--- a/styles.css
+++ b/styles.css
@@ -13,10 +13,10 @@ html {
 }
 
 /* LAYOUT STYLEs */
-html,
 body {
   overflow: hidden;
-  position: fixed;
+  position: absolute;
+  width: 100vw;
 }
 
 .page-wrapper {
